--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "dev": "node server.js",
+    "prebuild": "cd client && npm run build && rm -rf ../public && mv ./dist ../public",
+    "build": "node server.js"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
